# stubs

./: .gitignore  Readme.md
.github/workflows/: build.yml  trigger_deploy.yml  web_jekyll_build.yml
ansible/roles/stubs/tasks/: main.yml
deploy_tests/: requirements.txt  test_web.py
gpu/: Readme.md
gpu/python/: Readme.md  pyproject.toml  start.sh
gpu/python/src/gputest/: gputest.py
gpu/python/src/stub_gpu_python_project.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
gpu/python/tests/stubpy/: test_gpu.py
languages/lean/basic/: Tests.lean  bootstrap.sh  lake-manifest.json  lakefile.toml  start.sh
languages/lean/basic/Tests/: TestBasic.lean
languages/python/: Readme.md  pyproject.toml  start.sh
languages/python/basic/: .flake8  requirements.txt  start.sh
languages/python/basic/src/stub_python_project.egg-info/: SOURCES.txt  top_level.txt
languages/python/basic/src/stubpy/: stubpy.py
languages/python/basic/tests/stubpy/: test_message.py
languages/python/learning/: Readme.md  pyproject.toml  start.sh
languages/python/learning/src/learning/: learning.py
languages/python/learning/src/learning/notebooks/: guassian.ipynb  mnist.ipynb
languages/python/learning/tests/stubpy/: test_learning.py
languages/python/multiply/: pyproject.toml  requirements.txt  start.sh
languages/python/multiply/src/multiply/: apple.py  array_abstraction.py  benchmark.py  matrix_factory.py  multiply.py  payloads.py
languages/python/multiply/src/multiply/notebooks/: apple.ipynb  cuda.ipynb
languages/python/multiply/src/stub_gpu_python_project.egg-info/: PKG-INFO  SOURCES.txt
languages/python/multiply/tests/multiply/: test_benchmark.py  test_factory.py  test_payloads.py
languages/python/multiply/tests/stubpy/: test_benchmark.py  test_factory.py  test_payloads.py
languages/python/src/stub_python_project.egg-info/: PKG-INFO  entry_points.txt
languages/python/tests/stubpy/: test_message.py
web/ansible/: inventory_example.yml  web.yml
web/ansible/roles/jekyll/files/: jekyll.conf  web.conf
web/ansible/roles/jekyll/tasks/: main.yml
web/jekyll/: Gemfile  _config.yml  index.md
web/jekyll/site-styles/: ipython.css  local_styles.css
