# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "stub-multiply-project"
version = "0.0.1"
authors = [
  { name="James Hetherington", email="j.hetherington@ucl.ac.uk" },
]
description = "Demonstrate speedup with various tools for matrix multiplication"
readme = "Readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "scipy", "numba", "matplotlib",
    "jax==0.5.0;platform_system == 'Darwin'", "jax-metal==0.1.1;platform_system == 'Darwin'", # if on Apple Silicon
    "jax;platform_system != 'Darwin'", "jax[cuda13];platform_system != 'Darwin'", # if not on Apple Silicon, just JAX
    "cupy;platform_system != 'Darwin'", # if not on Apple Silicon,  CuPy
    "mlx;platform_system == 'Darwin'", # if on Apple Silicon, MLX
    "torch"
]

[project.optional-dependencies]
test = [
    "pytest",
    "flake8",
    "autopep8"
]

[project.scripts]
multiply = "multiply.multiply:entry"

